# xmonad-config

./: Makefile  build  my-xmonad.cabal  stack.yaml  xmonad.hs
configs/: axolotl.hs  echidna.hs  minimal.hs  trantor.hs
icons/: 3cols.xpm  float.xpm  full.xpm  grid.xpm  mtall.xpm  tabs.xpm  tall.xpm
lib/: Common.hs  DefaultConfig.hs  HostConfig.hs  Keybinds.hs  MyConfig.hs  MyPP.hs  Theme.hs
xmobar/: axolotl.hs  default.hs  echidna.hs  minimal.hs
