name:                my-xmonad
version:             0.1.0.0
license:             BSD3
author:              Ricard Illa
maintainer:          r.illa.pujagut@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  other-modules:       DefaultConfig
                     , MyConfig
                     , Theme
  build-depends:       base
                     , mtl
                     , X11
                     , containers
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded -O2
